Refactored remaining tests